--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     
     <p> MY FIRST BLOG1 </p>
-   <a href="https://github.com/surya-surendranath/surya-surendranath.github.io/blob/master/blog/c1-reflection-blog.html">My Refletion</a>   
+  <a href="https://surya-surendranath.github.io/blog/c1-reflection-blog">My Refletion</a>   
     <!-- this is a comment. -->
   
   </body>
