--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     
     <p> MY FIRST BLOG1 </p>
   <a href="https://surya-surendranath.github.io/blog/c1-reflection-blog">My Refletion</a>   
+
+  <a href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog">Time and habit</a>   
     <!-- this is a comment. -->
   
   </body>
