--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="styles/main.css">
     <title>MY FIRST BLOG </title>
     
 
@@ -18,5 +18,5 @@
   <a href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog">Time and habit</a>   
     <!-- this is a comment. -->
   
-  </body>
+  </body>s
 </html>
