--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     
     
-    <p> MY FIRST BLOG1 </p>
+    <h1> MY FIRST BLOG1 </h1>
   <a href="https://surya-surendranath.github.io/blog/c1-reflection-blog">My Refletion</a>   
 
   <a href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog">Time and habit</a>   
