--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     
     
-    <h1 id="h1" style="text-align=center"> MY FIRST BLOG1 </h1>
+    <h1 id="h1" > MY FIRST BLOG1 </h1>
   <a href="https://surya-surendranath.github.io/blog/c1-reflection-blog">My Refletion</a>   
 
   <a href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog">Time and habit</a>   
