--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     
     
     <h1 id="h1" > MY FIRST BLOG1 </h1>
-  <a href="https://surya-surendranath.github.io/blog/c1-reflection-blog">My Refletion</a>   
+  <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Refletion</a>   
 
-  <a href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog">Time and habit</a>   
+  <a id="p1" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >Time and habit</a>   
     <!-- this is a comment. -->
   
-  </body>s
+  </body>
 </html>
