--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Refletion</a>   
 
-  <a id="p1" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >Time and habit</a>   
+  <a  href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >Time and habit</a>   
     <!-- this is a comment. -->
   
   </body>
