--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     
     <h1 id="h1" > MY FIRST BLOG1 </h1>
 
-  <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Refletion</a>   
+    <img src="IMG1.png" alt="HTML5 Icon" style="width:128px;height:128px;">
+
+  <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Reflection</a>   
 
   <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >Time and habit</a>   
     <!-- this is a comment. -->
