--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <h1 id="h1" > MY FIRST BLOG1 </h1>
 
-    <img src="IMG1.png" alt="HTML5 Icon" style="width:200px;height:200px;margin-left:1000px;">
+    <img src="IMG1.png" alt="HTML5 Icon" style="width:200px;height:200px;align:center">
 
   <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Reflection</a>   
 
