--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     
     <h1 id="h1" > MY FIRST BLOG1 </h1>
 
-    <img src="IMG1.png" alt="HTML5 Icon" style="width:100px;height:100px;margin-left:900px;">
+    <img src="IMG1.png" alt="HTML5 Icon" style="width:100px;height:100px;">
 
   <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Reflection</a>   
+  <p> </p>
 
   <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >Time and habit</a>   
     <!-- this is a comment. -->
