--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     
     
     <h1 id="h1" > MY FIRST BLOG1 </h1>
-
+<div>
     <img src="IMG1.png" alt="HTML5 Icon" style="width:100px;height:100px;">
-
+</div>
+<div>
   <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Reflection</a>   
-  <p> </p>
 
+</div>
+<div>
   <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >Time and habit</a>   
     <!-- this is a comment. -->
-  
+  </div>
   </body>
 </html>
