--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     
     
-    <h1 id="h1" > MY FIRST BLOG1 </h1>
+    <h1 id="h1" > MY FIRST BLOG </h1>
 <div>
-    <img src="IMG1.png" alt="HTML5 Icon" style="width:235px;height:275px;margin-left:680px;">
+    <img src="IMG1.png" alt="HTML5 Icon" style="width:235px;height:275px;margin-left:670px;">
 </div>
 <div>
   <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Reflection</a>   
