changes to code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+/* <html>
   <head>
 
 <link rel="stylesheet" type="text/css" href="styles/main.css">
@@ -14,7 +13,7 @@
     
     <h1 id="h1" > MY FIRST BLOG </h1>
 <div>
-    <img src="IMG1.png" alt="HTML5 Icon" style="width:235px;height:275px;margin-left:678.1px;">
+    <img src="IMG1.png" alt="HTML5 Icon" style="width:235px;height:275px;margin-left:677.1px;">
 </div>
 <div>
   <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Reflection</a>   
@@ -24,5 +23,12 @@
   <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >Time and habit</a>   
     <!-- this is a comment. -->
   </div>
+  <div>
+  <a id="p2" href="https://surya-surendranath.github.io/blog/t2-html-css-dom-p1"  >Time and habit</a>   
+    <!-- this is a comment. -->
+  </div>
   </body>
 </html>
+*/
+
+/*  new code   */
