--- a/index.html
+++ b/index.html
@@ -33,21 +33,18 @@
 <body>
 
 <div id="header">
-<h1>City Gallery</h1>
+<h1>My BLOG</h1>
 </div>
 
 <div id="nav">
-London<br>
-Paris<br>
-Tokyo
+<br>
+<br>
 </div>
 
 <div id="section">
 <h2>abc</h2>
-<p>London is the capital city of England. It is the most populous city in the United Kingdom,
-with a metropolitan area of over 13 million inhabitants.</p>
-<p>Standing on the River Thames, London has been a major settlement for two millennia,
-its history going back to its founding by the Romans, who named it Londinium.</p>
+<p>.</p>
+<p>S</p>
 </div>
 
 <div id="footer">
