changes to code

--- a/index.html
+++ b/index.html
@@ -1,28 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-#header {
-    background-color:black;
-    color:white;
-    text-align:center;
-    padding:5px;
-}
-#nav {
-    line-height:30px;
-    background-color:#eeeeee;
-    height:300px;
-    width:100px;
-    float:left;
-    padding:5px;        
-}
-#section {
-    width:350px;
-    float:left;
-    padding:20px;    
-}
 
-</style>
+<link rel="stylesheet" type="text/css" href="styles/main.css">
+
+
 </head>
 <body>
 
