changes to code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </div>
 
 <div id="nav">
+<a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >My Reflection</a>   
 <br>
 <br>
 </div>
