--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 
 <div id="nav">
-<a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  >MY REFLECTION</a>   
+<a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  ><b>MY REFLECTION</b>b></a>   
 <br>
 <br>
 </div>
