Reflection link addition change font7

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <div id="nav">
 <a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  ><b>MY REFLECTION</b></a>   
 <br>
+ <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >TIME AND HABIT</a>  
 <br>
 </div>
 
