--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </div>
 
 <div id="nav">
-<a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  ><b>MY REFLECTION</b></a>   
+<ul>
+<li><a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  ><b>MY REFLECTION</b></a> </li>
+<li> <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >TIME AND HABIT</a>  </li>li>
 
- <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >TIME AND HABIT</a>  
-
+</ul>
 </div>
 
 <div id="section">
