Reflection link addition change font10

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <div id="nav">
 <ul>
-<li><a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  ><b>MY REFLECTION</b></a> </li>
-<li> <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >TIME AND HABIT</a>  </li>li>
+<li><a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  ><b>MY REFLECTION</b> </li>
+<li> <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >TIME AND HABIT</a>  </li>
 
 </ul>
 </div>
