Reflection link addition change font10

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <div id="nav">
 <ul>
-<li><a id="p1" href="https://surya-surendranath.github.io/blog/c1-reflection-blog"  ><b>MY REFLECTION</b> </li>
-<li> <a id="p2" href="https://surya-surendranath.github.io/blog/c1-time-and-habit-blog"  >TIME AND HABIT</a>  </li>
-
+<li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</li>
+<p></p>
+<li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</li>
+<p></p>
 </ul>
 </div>
 
