--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 
 <div id="nav">
-<ul>
+<ul style="list-style-type:none">
 <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</li>
 <p></p>
 <li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</li>
