Reflection link addition change font15

--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
 </ul>
 </div>
 
-<div id="section">
+<div id="section1">
 <h2></h2>
 <p></p>
 <p></p>
 </div>
 
-
+<div id="section2">
+<h2></h2>
+<p></p>
+<p></p>
+</div>
 
 </body>
 </html>
