--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="img">
-    <img src="dev.png" alt="HTML5 Icon" style="float:bottom-right">
+    <img src="dev.png" alt="HTML5 Icon" style="float:right">
 </div>
 
 
