Reflection link addition change font10

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="img">
-    <img src="dev.png" alt="HTML5 Icon" style="float:center">
+    <img src="dev.png" alt="HTML5 Icon" style="float:right;margin-botton:0px;">
 </div>
 
 
