--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 </div>
 
 <div id="section1">
-<img src="IMG1.png" alt="HTML5 Icon" style="float:center;height:400px;width:200px">
+<img src="IMG1.png" alt="HTML5 Icon" style="float:center;height:500px;width:400px">
 <h2></h2>
 <p></p>
 <p></p>
 </div>
 
-<div class="img">
-    <img src="dev.png" alt="HTML5 Icon" style="float:right;margin-botton:0px;">
+<div id="footer">
+
 </div>
 
 
