--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 
 <div id="section1">
-<img src="IMG1.png" alt="HTML5 Icon" style="float:center;height:500px;width:400px">
+<img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:500px;width:300px">
 <h2></h2>
 <p></p>
 <p></p>
