--- a/index.html
+++ b/index.html
@@ -26,20 +26,14 @@
 </div>
 
 <div id="section1">
-<img src="IMG1.png" alt="HTML5 Icon" style="float:center;height:210px;width:200px">
-<h2></h2>
+<img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:210px;width:200px">
+<h2>SURYA S NATH</h2>
 <p></p>
 <p></p>
 </div>
 
 <div id="footer">
-<br>
-<br>
-<br>
-<br>
-<br>
 
-gtyy
 </div>
 
 
