--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </ul>
 </div>
 
-<div id="section1">
+<div id="section">
 <img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:210px;width:200px">
 <h2> SURYA S NATH</h2>
 <p></p>
