--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="section">
 <img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:210px;width:200px">
 <h2> SURYA S NATH</h2>
-<p>vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv</p>
+<p>the wjwjwj hhhh jjj jjj jjjj iii ooo hh ddd dd dd frr ww ww rr rr r r  rr rr rr tt tt tt tt tt tt tt yy yy yy yy yy vv ssssn ss ss  qq ee ee </p>
 <p></p>
 </div>
 
