--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 
 <div id="section">
-<img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:210px;width:200px">
+<img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:210px;width:200px;border:3px solid black;">
 <h2> SURYA S NATH</h2>
 <p>the wjwjwj hhhh jjj jjj jjjj iii ooo hh ddd dd dd frr ww ww rr rr r r  rr rr rr tt tt tt tt tt tt tt yy yy yy yy yy vv ssssn ss ss  qq ee ee </p>
 <p></p>
