Reflection link addition change fon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="section">
 <img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:210px;width:200px;border:3px solid black;">
 <h2> SURYA S NATH</h2>
-<p>the wjwjwj hhhh jjj jjj jjjj iii ooo hh ddd dd dd frr ww ww rr rr r r  rr rr rr tt tt tt tt tt tt tt yy yy yy yy yy vv ssssn ss ss  qq ee ee </p>
+<p>I am Surya S Nath. I live in Wellington. I want to learn programming better and better. My ambition is to become a software developer. I am a very passionate and ambitious person. I enjoy being challenged.Learning at EDA helps me to code from basic level.</p>
 <p></p>
 </div>
 
