Reflection link addition change fon

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </div>
 
 <div id="section">
-<img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:210px;width:200px;border:3px solid black;">
+<img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:220px;width:200px;border:3px solid black;">
 <h2> SURYA S NATH</h2>
-<p>I am Surya S Nath. I live in Wellington. I want to learn programming better and better. My ambition is to become a software developer. I am a very passionate and ambitious person. I enjoy being challenged.Learning at EDA helps me to code from basic level.</p>
+<p>I am Surya S Nath. I live in Wellington. My ambition is to become a software developer. I am a very passionate and ambitious person. I enjoy being challenged.</p>
 <p></p>
 </div>
 
