--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="section">
 <img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:220px;width:200px;border:3px solid black;">
 <h2> SURYA S NATH</h2>
-<p>I am Surya S Nath. I live in Wellington. I am a very passionate and ambitious person.My ambition is to become a software developer, I enjoy being challenged and strive for the best.</p>
+<p>I am Surya S Nath. I live in Wellington.<br> I am a very passionate and an <br>ambitious person.My ambition is to become a <br>software developer. I enjoy being challenged <br>and strive for the best.</p>
 <p></p>
 </div>
 
