Reflection link addition change fo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div id="section">
 <img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:220px;width:200px;border:3px solid black;">
-<h2> <i>SURYA S NATH</i></h2>
+<h2 style="text-color:red; font-family:Arial;"> <i>SURYA S NATH</i></h2>
 <p><i>I am Surya S Nath. I live in Wellington. I am a very passionate and an ambitious person. My ambition is to become a software developer. I enjoy being challenged and strive for the best.</i></p>
 <p></p>
 </div>
