--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </ul>
 </div>
 
-<div id="section">
+<div id="section" >
 <img src="IMG1.png" alt="HTML5 Icon" style="float:right;height:220px;width:200px;border:3px solid black;">
-<h2 style="text-color:red; font-family:Arial;"> <i>SURYA S NATH</i></h2>
-<p><i>I am Surya S Nath. I live in Wellington. I am a very passionate and an ambitious person. My ambition is to become a software developer. I enjoy being challenged and strive for the best.</i></p>
+<h2> <i>&nbsp;&nbsp;&nbsp;SURYA S NATH</i></h2>
+<p><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am Surya S Nath. I live in Wellington. I am a very passionate and an ambitious person. My ambition is to become a software developer. I enjoy being challenged and strive for the best.</i></p>
 <p></p>
 </div>
 
