Reflection link addition change fo

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <div id="nav">
 <ul style="list-style-type:none">
 <br>
-<li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</li>
+<li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li>
 <br>
 <br>
 <br>
 
-<li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</li>
+<li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li>
 
 </ul>
 </div>
