--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="styles/main.css">
-
+<style>
+*{
+  box-sizing: border-box;
+}
 
 </head>
 <body>
