Reflection link addition change fo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div id="nav">
 <ul style="list-style-type:none">
 <br>
-<li><a id="p1" href="surya-surendranath.github.io"  >HOME</a></li>
+<li><a id="p1" href=""  >HOME</a></li>
 <br>
 <br>
 <br>
