--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div id="nav">
 <ul style="list-style-type:none">
 <br>
-<li><a id="p1" href=""  >HOME</a></li>
+<li><a id="p1" href="../index.html"  >HOME</a></li>
 <br>
 <br>
 <br>
@@ -48,7 +48,7 @@
 <br>
 <br>
 
-<li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li>
+<li> <a id="p2" href="c1-time-and-habit-blog"  >TIME AND HABIT</a></li>
 
 </ul>
 </div>
