--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 <br>
 <br>
 <br>
-<li><a id="p1" href="blog/t2-html-css-dom-p1"  >UDACITY REFLECTION</a></li>
+<li><a id="p1" href="blog/t2-html-css-dom-p1"  >UDACITY REFLECTION1</a></li>
+<br>
+<br>
+<br>
+<li><a id="p1" href="t2-html-css-dom-p2"  >UDACITY REFLECTION2</a></li>
 </ul>
 </div>
 
