--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 <br>
 <br>
 <li><a id="p1" href="t2-html-css-dom-p2"  >UDACITY REFLECTION2</a></li>
+<br>
+<br>
+<br>
+<li><a id="p1" href="t2-html-css-dom-p2"  >EMOTIONAL INTELLIGENCE</a></li>
 </ul>
 </div>
 
