--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 <br>
 <br>
 <br>
-<li><a id="p1" href="t2-html-css-dom-p2"  >UDACITY REFLECTION2</a></li>
+<li><a id="p1" href="blog/t2-html-css-dom-p2 "  >UDACITY REFLECTION2</a></li>
 <br>
 <br>
 <br>
-<li><a id="p1" href="c2-emotional-intelligence"  >EMOTIONAL &nbsp;&nbsp;&nbsp;INTELLIGENCE</a></li>
+<li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL &nbsp;&nbsp;&nbsp;INTELLIGENCE</a></li>
 </ul>
 </div>
 
