--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
 </style>
+
+<script type="text/javascript">
+function enlarge()
+{
+document.getElementById("x").width=300px;
+document.getElementById("x").height=240px;
+}
+</script>
+
+
 </head>
 <body>
 
@@ -65,7 +75,7 @@
 </div>
 
 <div id="section" >
-<img src="IMG1.png" alt="HTML537 Icon" style="float:right;height:220px;width:200px;border:3px solid black;">
+<img src="IMG1.png" alt="HTML537 Icon" onclick="enlarge()" id="x" style="float:right;height:220px;width:200px;border:3px solid black;">
 <h2> <i><b>&nbsp;&nbsp;&nbsp;&nbsp;SURYA S NATH</b></i></h2>
 <p><i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am Surya S Nath.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I live in Wellington. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am a very passionate and an ambitious person.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My ambition is to become a software developer. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy being challenged and strive for the best.</i></b></p>
 <p></p>
