--- a/index.html
+++ b/index.html
@@ -30,13 +30,7 @@
 .col-12 {width: 100%;}
 </style>
 
-<script type="text/javascript">
-function enlarge()
-{
-document.getElementById("x").width=300px;
-document.getElementById("x").height=240px;
-}
-</script>
+
 
 
 </head>
@@ -75,6 +69,13 @@ document.getElementById("x").height=240px;
 </div>
 
 <div id="section" >
+<script type="text/javascript">
+function enlarge(x)
+{
+document.getElementById("x").width=300
+document.getElementById("x").height=240
+}
+</script>
 <img src="IMG1.png" alt="HTML537 Icon" onclick="enlarge()" id="x" style="float:right;height:220px;width:200px;border:3px solid black;">
 <h2> <i><b>&nbsp;&nbsp;&nbsp;&nbsp;SURYA S NATH</b></i></h2>
 <p><i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am Surya S Nath.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I live in Wellington. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am a very passionate and an ambitious person.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My ambition is to become a software developer. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy being challenged and strive for the best.</i></b></p>
