--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
 <div id="section" >
 <script type="text/javascript">
-function enlarge(x)
+function enlarge()
 {
-document.getElementById("x").width=300
-document.getElementById("x").height=240
+document.getElementById("x").width=300px;
+document.getElementById("x").height=240px;
 }
 </script>
 <img src="IMG1.png" alt="HTML537 Icon" onclick="enlarge()" id="x" style="float:right;height:220px;width:200px;border:3px solid black;">
