--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
 </ul>
 </div>
 
+
+
 <div id="section" >
-<script type="text/javascript">
+<<script src="/javascripts/application.js" type="text/javascript" charset="utf-8" async defer></script>
 function enlarge()
 {
 document.getElementById("x").width=300px;
