--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 
 <div id="section" >
-<<script src="/javascripts/application.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="/javascripts/application.js" type="text/javascript" charset="utf-8" async defer>
 function enlarge()
 {
 document.getElementById("x").width=300px;
