--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="styles/main.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles/main.css">
 <style>
 *{
   box-sizing: border-box;
@@ -36,60 +36,35 @@
 </head>
 <body>
 
-<div id="header">
-<h1>My BLOG</h1>
-</div>
+  <div id="header">
+    <h1>My BLOG</h1>
+  </div>
 
-<div id="nav">
-<ul style="list-style-type:none">
-<br>
-<li><a id="p1" href="../index.html"  >HOME</a></li>
-<br>
-<br>
-<br>
-<li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li>
-<br>
-<br>
-<br>
+    <div id="nav">
+      <ul style="list-style-type:none"><br>
+      
+       <li><a id="p1" href="../index.html"  >HOME</a></li><br><br><br>
 
-<li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li>
-<br>
-<br>
-<br>
-<li><a id="p1" href="blog/t2-html-css-dom-p1"  >UDACITY REFLECTION1</a></li>
-<br>
-<br>
-<br>
-<li><a id="p1" href="blog/t2-html-css-dom-p2 "  >UDACITY REFLECTION2</a></li>
-<br>
-<br>
-<br>
-<li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL &nbsp;&nbsp;&nbsp;INTELLIGENCE</a></li>
-</ul>
-</div>
+       <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li><br><br><br>
+
+       <li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li><br><br><br>
+       <li><a id="p1" href="blog/t2-html-css-dom-p1"  >UDACITY REFLECTION1</a></li><br><br><br>
+       <li><a id="p1" href="blog/t2-html-css-dom-p2 "  >UDACITY REFLECTION2</a></li><br><br><br>
+       <li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL &nbsp;&nbsp;&nbsp;INTELLIGENCE</a></li>
+      </ul>
+    </div>
 
 
 
-<div id="section" >
-<script src="/javascripts/application.js" type="text/javascript" charset="utf-8" async defer>
-  
- function enlarge()
-{
-document.getElementById("x").width=300px;
-document.getElementById("x").height=240px;
-} 
-</script>
+      <div id="section" >
+       <img src="IMG1.png" alt="HTML537 Icon" onclick="enlarge()" id="x" style="float:right;height:220px;width:180px;border:3px solid black;">
+       <h2> <i><b>&nbsp;&nbsp;&nbsp;&nbsp;SURYA S NATH</b></i></h2>
+       <p><i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am Surya S Nath.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I live in Wellington. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am a very passionate and an ambitious person.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My ambition is to become a software developer. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy being challenged and strive for the best.</i></b></p>
+       <p></p>
+      </div>
 
-
-<img src="IMG1.png" alt="HTML537 Icon" onclick="enlarge()" id="x" style="float:right;height:220px;width:180px;border:3px solid black;">
-<h2> <i><b>&nbsp;&nbsp;&nbsp;&nbsp;SURYA S NATH</b></i></h2>
-<p><i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am Surya S Nath.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I live in Wellington. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am a very passionate and an ambitious person.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My ambition is to become a software developer. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy being challenged and strive for the best.</i></b></p>
-<p></p>
-</div>
-
-<div id="footer">
-Copyright@suryasnath.com
-</div>
+      <div id="footer">Copyright@suryasnath.com
+      </div>
 
 
 </body>
