--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/main.css">
-
-
-
-
-
 </head>
 <body>
 
@@ -16,25 +11,19 @@
   </div>
 
     <div id="nav">
-      <ul style="list-style-type:none"><br>
-      
-       <li><a id="p1" href="../index.html"  >HOME</a></li><br><br><br>
-
-       <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li><br><br><br>
-
-       <li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li><br><br><br>
-       <li><a id="p1" href="blog/t2-html-css-dom-p1"  >UDACITY REFLECTION1</a></li><br><br><br>
-       <li><a id="p1" href="blog/t2-html-css-dom-p2 "  >UDACITY REFLECTION2</a></li><br><br><br>
-       <li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL &nbsp;&nbsp;&nbsp;INTELLIGENCE</a></li>
+      <ul style="list-style-type:none">
+       <li><a id="p1" href="../index.html"  >HOME</a></li>
+       <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li>
+       <li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li>
+       <li><a id="p1" href="blog/t2-html-css-dom-p1"  >UDACITY REFLECTION1</a></li>
+       <li><a id="p1" href="blog/t2-html-css-dom-p2 "  >UDACITY REFLECTION2</a></li>
+       <li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL INTELLIGENCE</a></li>
       </ul>
     </div>
-
-
-
+    
       <div id="section" >
-       <img src="IMG1.png" alt="HTML537 Icon" onclick="enlarge()" id="x" style="float:center;height:220px;width:180px;border:3px solid black;">
-       <h2> <i><b>&nbsp;&nbsp;&nbsp;&nbsp;SURYA S NATH</b></i></h2>
-       <p><i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am Surya S Nath.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I live in Wellington. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am a very passionate and an ambitious person.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My ambition is to become a software developer. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy being challenged and strive for the best.</i></b></p>
+       <h2> <i><b>SURYA S NATH</b></i></h2>
+       <p><i><b>I am Surya S Nath.I live in Wellington. I am a very passionate and an ambitious person.My ambition is to become a software developer. I enjoy being challenged and strive for the best.</i></b></p>
        <p></p>
       </div>
 
