new code changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     
       <div id="section" >
        <h2> <i><b>SURYA S NATH</b></i></h2>
-       <p><i><b>I am Surya S Nath.I live in Wellington. I am a very passionate and an ambitious person.My ambition is to become a software developer. I enjoy being challenged and strive for the best.</i></b></p>
+       <p><i><b>I am Surya S Nath.</i></b></p>
+       <p><i><b>I live in Wellington.</i></b></p>
+       <p><i><b> I am a very passionate and an ambitious person.</i></b></p>
+      m<p><i><b>My ambition is to become a software developer.</i></b></p>
+        <p><i><b>  I enjoy being challenged and strive for the best.</i></b></p>
        <p></p>
       </div>
 
