new code changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
   <div id="header">
-    <h1>My BLOG</h1>
+    <h1>My EDA BLOG</h1>
   </div>
 
     <div id="nav">
@@ -22,7 +22,7 @@
     </div>
     
       <div id="section" >
-       <h2 id="h2"> <i><b>HI </b></i></h2> 
+       <h2 id="h2"> <i><b>HI EVERYONE </b></i></h2> 
        <p id="p2"><i><b>I am Surya S Nath.</i></b></p>
        <p id="p3"><i><b>I live in Wellington.</i></b></p>
        <p id="p4"><i><b> I am a very passionate and an ambitious person.</i></b></p>
