new code changes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
     
       <div id="section" >
+      <img class="img1" src="images/IMG1.png" alt="profile" width="200" height="200">
        <h2 id="h2"> <i><b>HI EVERYONE </b></i></h2> 
        <p id="p2"><i><b>I am Surya S Nath.</i></b></p>
        <p id="p3"><i><b>I live in Wellington.</i></b></p>
