reflection page code changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>My EDA BLOG</h1>
   </div>
 
-    <div id="nav">
+    <nav id="nav">
       <ul style="list-style-type:none">
        <li><a id="p1" href="../index.html"  >MY HOME</a></li>
        <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li>
@@ -19,7 +19,7 @@
        <li><a id="p1" href="blog/t2-html-css-dom-p2 "  >UDACITY REFLECTION2</a></li>
        <li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL INTELLIGENCE</a></li>
       </ul>
-    </div>
+    </nav>
     
       <div id="section" >
 <img class="img1" src="images/IMG1.png" alt="profile" width="150" height="250">
