--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </div>
 
     <nav id="nav">
-      <ul style="list-style-type:none">
+      <ul >
        <li><a id="p1" href="../index.html"  >MY HOME</a></li>
        <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li>
        <li> <a id="p1" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li>
@@ -21,8 +21,8 @@
       </ul>
     </nav>
     
-      <div id="section" >
-<img class="img1" src="images/IMG1.png" alt="profile" width="150" height="250">
+      <section id="section" >
+      <img class="img1" src="images/IMG1.png" alt="profile" width="150" height="250">
        <h2 id="h2"> <i><b>HI EVERYONE </b></i></h2> 
 
        <p id="p2"><i><b>I am Surya S Nath.</i></b></p>
@@ -31,10 +31,10 @@
        <p id="p5"><i><b>My ambition is to become a software developer.</i></b></p>
        <p id="p6"><i><b>  I enjoy being challenged and strive for the best.</i></b></p>
        <p></p>
-      </div>
+      </section>
 
-      <div id="footer">Copyright@suryasnath.com
-      </div>
+      <footer id="footer">Copyright@suryasnath.com
+      </footer>
 
 
 </body>
