--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-  <div id="header">
+  <header id="header">
     <h1>My EDA BLOG</h1>
-  </div>
+  </header>
 
     <nav id="nav">
       <ul >
@@ -22,14 +22,13 @@
     </nav>
     
       <section id="section" >
-      <img class="img1" src="images/IMG1.png" alt="profile" width="150" height="250">
-       <h2 id="h2"> <i><b>HI EVERYONE </b></i></h2> 
-
-       <p id="p2"><i><b>I am Surya S Nath.</i></b></p>
-       <p id="p3"><i><b>I live in Wellington.</i></b></p>
-       <p id="p4"><i><b> I am a very passionate and an ambitious person.</i></b></p>
-       <p id="p5"><i><b>My ambition is to become a software developer.</i></b></p>
-       <p id="p6"><i><b>  I enjoy being challenged and strive for the best.</i></b></p>
+       <img class="img1" src="images/IMG1.png" alt="profile" width="150" height="250">
+         <h2 id="h2"> <i><b>HI EVERYONE </b></i></h2> 
+         <p id="p2"><i><b>I am Surya S Nath.</i></b></p>
+         <p id="p3"><i><b>I live in Wellington.</i></b></p>
+         <p id="p4"><i><b> I am a very passionate and an ambitious person.</i></b></p>
+         <p id="p5"><i><b>My ambition is to become a software developer.</i></b></p>
+         <p id="p6"><i><b>  I enjoy being challenged and strive for the best.</i></b></p>
        <p></p>
       </section>
 
