--- a/index.html
+++ b/index.html
@@ -3,37 +3,46 @@
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/main.css">
+
+
+
+
+
 </head>
-
 <body>
-  <header id="header">
-    <h1>My EDA BLOG</h1>
-  </header>
 
-    <nav id="nav">
-      <ul >
-       <li><a id="p1" href="../index.html"  >MY HOME</a></li>
-       <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li>
-       <li> <a id="p1" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li>
-       <li><a id="p1" href="blog/t2-html-css-dom-p1"  >UDACITY REFLECTION1</a></li>
-       <li><a id="p1" href="blog/t2-html-css-dom-p2 "  >UDACITY REFLECTION2</a></li>
-       <li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL INTELLIGENCE</a></li>
+  <div id="header">
+    <h1>My BLOG</h1>
+  </div>
+    <!--use semantic <nav></nav> element here, instead of <div id=nav>-->
+    <div id="nav">
+      <ul style="list-style-type:none"><br>
+      
+      <!--you are using <br> elements to style the page (create more space below the text. This is bad practice. Use CSS to select <li> elements and increase the bottom margin size!-->
+       <li><a id="p1" href="../index.html"  >HOME</a></li><br><br><br>
+
+       <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li><br><br><br>
+
+       <li> <a id="p2" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li><br><br><br>
+       <li><a id="p1" href="blog/t2-html-css-dom-p1"  >UDACITY REFLECTION1</a></li><br><br><br>
+       <li><a id="p1" href="blog/t2-html-css-dom-p2 "  >UDACITY REFLECTION2</a></li><br><br><br>
+       <!--again, use CSS to style text, rather than &nbsp; - a google search for "CSS space between words" found http://www.w3schools.com/cssref/pr_text_word-spacing.asp, which is the CSS you need-->
+       <li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL &nbsp;&nbsp;&nbsp;INTELLIGENCE</a></li>
       </ul>
-    </nav>
-    
-      <section id="section" >
-       <img class="img1" src="images/IMG1.png" alt="profile" width="150" height="250">
-         <h2 id="h2"> <i><b>HI EVERYONE </b></i></h2> 
-         <p id="p2"><i><b>I am Surya S Nath.</i></b></p>
-         <p id="p3"><i><b>I live in Wellington.</i></b></p>
-         <p id="p4"><i><b> I am a very passionate and an ambitious person.</i></b></p>
-         <p id="p5"><i><b>My ambition is to become a software developer.</i></b></p>
-         <p id="p6"><i><b>  I enjoy being challenged and strive for the best.</i></b></p>
-       <p></p>
-      </section>
+    </div>
 
-      <footer id="footer">Copyright@suryasnath.com
-      </footer>
+
+      <!--use <section></section> instead of below-->
+      <div id="section" >
+       <!--never add 'inline' CSS - never use the 'style' element attribute. the CSS below should be in your CSS file. how can you select that element?-->
+       <img src="IMG1.png" alt="HTML537 Icon" onclick="enlarge()" id="x" style="float:center;height:220px;width:180px;border:3px solid black;">
+       <h2> <i><b>&nbsp;&nbsp;&nbsp;&nbsp;SURYA S NATH</b></i></h2>
+       <p><i><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am Surya S Nath.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I live in Wellington. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am a very passionate and an ambitious person.<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My ambition is to become a software developer. <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I enjoy being challenged and strive for the best.</i></b></p>
+       <p></p>
+      </div>
+
+      <div id="footer">Copyright@suryasnath.com
+      </div>
+
 
 </body>
-</html>
