--- a/index.html
+++ b/index.html
@@ -1,39 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
-</head>
-
-<body>
-  <header id="header">
-    <h1>My EDA BLOG</h1>
-  </header>
-
-    <nav id="nav">
-      <ul >
-       <li><a id="p1" href="../index.html"  >MY HOME</a></li>
-       <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li>
-       <li> <a id="p1" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li>
-       <li><a id="p1" href="blog/t2-html-css-dom-p1"  >UDACITY REFLECTION1</a></li>
-       <li><a id="p1" href="blog/t2-html-css-dom-p2 "  >UDACITY REFLECTION2</a></li>
-       <li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL INTELLIGENCE</a></li>
-      </ul>
-    </nav>
+  <head>
+    <title></title>
+    <meta charset="UTF-8">
     
-      <section id="section" >
-       <img class="img1" src="images/IMG1.png" alt="profile" width="150" height="250">
-         <h2 id="h2"> <i><b>HI EVERYONE </b></i></h2> 
-         <p id="p2"><i><b>I am Surya S Nath.</i></b></p>
-         <p id="p3"><i><b>I live in Wellington.</i></b></p>
-         <p id="p4"><i><b> I am a very passionate and an ambitious person.</i></b></p>
-         <p id="p5"><i><b>My ambition is to become a software developer.</i></b></p>
-         <p id="p6"><i><b>  I enjoy being challenged and strive for the best.</i></b></p>
-       <p></p>
-      </section>
-
-      <footer id="footer">Copyright@suryasnath.com
-      </footer>
-
-</body>
+  </head>
+  <body>
+  
+  </body>
 </html>
