--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <link re="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+  <link re="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 </head>
 
 <body>
   <header id="header">
     <h1>My EDA BLOG</h1>
+     <ul>
+      <li><a class="active" href="#home">Home</a></li>
+      <li><a href="#news">News</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About</a></li>
+     </ul>
   </header>
 
     <nav id="nav">
@@ -36,4 +44,4 @@
       </footer>
 
 </body>
-</html>>
+</html>
