--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header id="header">
     <h1>My EDA BLOG</h1>
-     <ul>
+     <ul class="menu">
       <li><a class="active" href="#home">Home</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#contact">Contact</a></li>
