--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header id="header">
     <h1>My EDA BLOG</h1>
-     <ul class="menu">
+     <ul >
       <li><a class="active" href="#home">Home</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#contact">Contact</a></li>
@@ -19,7 +19,7 @@
   </header>
 
     <nav id="nav">
-      <ul >
+      <ul class="menu1">
        <li><a id="p1" href="../index.html"  >MY HOME</a></li>
        <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li>
        <li> <a id="p1" href="blog/c1-time-and-habit-blog"  >TIME AND HABIT</a></li>
