removing navigation bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      </ul>
   </header>
 
-    <nav id="nav">
+   <!-- <nav id="nav">
       <ul class="menu1">
        <li><a id="p1" href="../index.html"  >MY HOME</a></li>
        <li><a id="p1" href="blog/c1-reflection-blog"  >MY REFLECTION</a></li>
@@ -28,7 +28,7 @@
        <li> <a id="p1" href="blog/c2-emotional-intelligence"  >EMOTIONAL INTELLIGENCE</a></li>
       </ul>
     </nav>
-    
+    -->
       <section id="section" >
        <img class="img1" src="images/IMG1.png" alt="profile" width="150" height="250">
          <h2 id="h2"> <i><b>HI EVERYONE </b></i></h2> 
