--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </section>
       -->
 
-      <footer id="footer">Copyright@suryasnath.com
+      <footer id="footer">
       </footer>
 
 </body>
