adding one image some change

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       -->
 
       <footer id="footer">
-       <img class="img1" src="bb.jpg" alt="profile" >
+       <img class="img1" src="images/bb.jpg" alt="profile" >
       </footer>
 
 </body>
