--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <h1>My EDA BLOG</h1>
      <ul >
       <li><a class="active" href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
+      <li><a href="#blog">Blogs</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact me">Contact me</a></li>
      </ul>
   </header>
 
