add navigation menu

--- a/index.html
+++ b/index.html
@@ -11,9 +11,22 @@
   <header id="header">
     <h1>My EDA BLOG</h1>
      <ul >
-      <li><a class="active" href="#home">Home</a></li>
+      <li><a class="active" href="../index.html">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#blog">Blogs</a></li>
+        <ul>
+          <li><a class="active2" href="#blog">Cultural Blogs</a></li>
+             <ul>
+                <li> <a href=""blog/c1-reflection-blog"">MY REFLECTION</a></li>
+                <li> <a href=""blog/c1-time-and-habit-blog"">TIME AND HABIT</a></li>
+                <li> <a href=""blog/c2-emotional-intelligence"">EMOTIONAL INTELLIGENCE</a></li>
+              </ul>
+              <ul>
+          <li><a class="active3" href="#blog">Technical Blogs</a></li>
+             <ul>
+                <li> <a href=""blog/t2-html-css-dom-p1"">UDACITY REFLECTION1</a></li>
+                <li> <a href=""blog/t2-html-css-dom-p2"">UDACITY REFLECTION2</a></li>
+              </ul>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact me">Contact me</a></li>
      </ul>
