--- a/index.html
+++ b/index.html
@@ -10,30 +10,18 @@
 <body>
   <header id="header">
     <h1>My EDA BLOG</h1>
-     <ul >
-      <li><a class="active" href="../index.html">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#blog">Blogs</a>
-        <ul>
-          <li><a class="active2" href="#blog">Cultural Blogs</a>
-             <ul>
-                <li> <a href=""blog/c1-reflection-blog"">MY REFLECTION</a></li>
-                <li> <a href=""blog/c1-time-and-habit-blog"">TIME AND HABIT</a></li>
-                <li> <a href=""blog/c2-emotional-intelligence"">EMOTIONAL INTELLIGENCE</a></li>
-             </ul>
-          </li>
-               <ul>
-                 <li><a class="active3" href="#blog">Technical Blogs</a>
-                    <ul>
-                      <li> <a href=""blog/t2-html-css-dom-p1"">UDACITY REFLECTION1</a></li>
-                      <li> <a href=""blog/t2-html-css-dom-p2"">UDACITY REFLECTION2</a></li>
-                   </ul>
-                   </li>
-                   </ul>
-                   </li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact me">Contact me</a></li>
-     </ul>
+     
+
+<div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+
+
   </header>
 
    <!-- <nav id="nav">
