--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
   </div>
 </div>
 
+<div class="dropdown">
+  <button class="dropbtn">Dropdown2</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+
 
   </header>
 
