--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <div class="dropdown">
   <button class="dropbtn">ABOUT</button>
   <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
+    <a href="#">Link 2 <a href="#">Link 2 </a></a>
     <a href="#">Link 3</a>
   </div>
 </div>
