--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <button class="dropbtn">ABOUT</button>
   <div class="dropdown-content">
     <a href="#">Link 1 
-     <div class="dropdown-content1">
-     <a href="#">Link 2 </a> </a>
+     <div class="dropdown-content1"  <a href="#">Link 2 </a> </a> >
+    
      </div>
     <a href="#">Link 3</a>
 
