--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       -->
 
       <footer id="footer">
-       <img class="img1" src="images/bb.jpg" alt="profile" >
+       <img class="img1" src="images/nb.jpg" alt="profile" >
       </footer>
 
 </body>
