--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 </div>
 <div class="dropdown">
-  <button class="dropbtn" onclick="location.href='http://google.com';">PROJECTS</button>
+  <button class="dropbtn" onclick="location.href="blog/c1-reflection-blog">PROJECTS</button>
   <div class="dropdown-content">
     
 
