--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 <div class="dropdown">
   <button class="dropbtn">BLOG</button>
   <div class="dropdown-content">
-    <a href="#">Link 1 </a>
+    <a href="#">Link 1 
+    <div class="dropdown-content">
+    <li> <a href="blog/c1-reflection-blog"> ssb</a></li>
+    </div>
+    </a>
      
     <a href="#">Link 3</a>
 
