--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <button class="dropbtn">BLOG</button>
   <div class="dropdown-content">
     <a href="#">Link 1 
-    <div class="dropdown-content">
+    <div class="dropdown-content1">
     <li> <a href="blog/c1-reflection-blog"> ssb</a></li>
     </div>
     </a>
