--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
 <div class="dropdown">
   <button class="dropbtn">BLOG</button>
   <div class="dropdown-content">
-    <a href="#">Link 1 
+    <a href="#">Link 1 </a>
     <div class="dropdown-content1">
-    <li> <a href="blog/c1-reflection-blog"> ssb</a></li>
-    </div>
-    </a>
-     
-    <a href="#">Link 3</a>
+     <a href="#">Link 3</a><
 
   </div>
 </div>
