--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
   <button class="dropbtn">BLOG</button>
   <div class="dropdown-content">
     <a href="#">Link 1 </a>
-    <div class="dropdown-content1">
-     <a href="#">Link 3</a><
+    
 
   </div>
 </div>
@@ -44,7 +43,7 @@
 <div class="dropdown">
   <button class="dropbtn">CONTACT ME</button>
   <div class="dropdown-content">
-    
+    <a href="#">Link 1 </a>
 
   </div>
 </div>
