changes to code reflection

--- a/index.html
+++ b/index.html
@@ -73,9 +73,12 @@
       </section>
       -->
 
-      <footer id="footer">
+      <section id="footer">
        <img class="img1" src="images/gh.jpg" alt="profile" >
-      </footer>
+          <nav id="nav1">
+             <li><a id="p1" href="../index.html"  > <img src="images/twitter.png" title="something" width="50" height="50"/> </a></li>
+             </nav>
+      </section>
 
 </body>
 </html>
