changes to code reflection

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       -->
 
       <section id="footer">
-       <img class="img1" src="images/gh.jpg" alt="profile" >
+       <img class="img1" src="images/bb.jpg" alt="profile" >
           <nav id="nav1">
              <li><a id="p1" href="../index.html"  > <img src="images/twitter.png" title="something" width="50" height="50"/> </a></li>
              </nav>
