--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
        <img class="img1" src="images/bb.jpg" alt="profile" >
           <nav id="nav1">
              <li><a id="p1" href="../index.html"  > <img src="images/twitter.png" title="something" width="50" height="50"/> </a></li>
+              <li><a id="p1" href="../index.html"  > <img src="images/git.png" title="something" width="50" height="50"/> </a></li>
              </nav>
       </section>
 
