changes to code index

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
       </section>
       -->
 
-      <section id="footer">
+      <section id="sec">
        <img class="img1" src="images/bb.jpg" alt="profile" >
          
       </section>
 
-       <nav id="nav1">
-             <li><a  href="../index.html"  > <img src="images/twitter.png" title="something" width="50" height="50"/> </a></li>
-              <li><a  href="../index.html"  > <img src="images/git.png" title="something" width="50" height="50"/> </a></li>
-             </nav>
+       <footer id="nav1">
+             <a  href="../index.html"  > <img src="images/twitter.png" title="something" width="50" height="50"/> </a>
+              <a  href="../index.html"  > <img src="images/git.png" title="something" width="50" height="50"/> </a>
+             </footer>
 
 </body>
 </html>
