--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 </div>
 <div class="dropdown">
-  <button class="dropbtn" onclick="location.href='https://surya-surendranath.github.io/blog/c1-reflection-blog';">PROJECTS</button>
+  <button class="dropbtn" onclick="location.href='https://surya-surendranath.github.io/blog/Technical-blob';">PROJECTS</button>
   <div class="dropdown-content">
     
 
