--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
       <section id="sec">
        <img class="img1" src="images/bb.jpg" alt="profile" >
-        <DIV id="division1" STYLE="position:absolute; top:250px; left:0px; width:100%; height:50px; float:left">
-<CENTER><FONT SIZE="+4" COLOR="00ff00">WELCOME TO my Homepage
+        <DIV id="division1" STYLE="position:absolute; top:250px; left:0px; width:100%; height:100px; float:left">
+<CENTER><FONT SIZE="+4" COLOR="00ff00"><b>WELCOME TO my Homepage</b>
   
 </FONT></CENTER> 
       </section>
