About me page adding animation

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 
       <section id="sec">
        <img class="img1" src="images/bb.jpg" alt="profile" >
-        <DIV id="division1" STYLE="position:absolute; top:250px; left:0px; width:100%; height:100px; float:left">
-<CENTER><FONT SIZE="+4" COLOR="00ff00"><b>WELCOME TO my Homepage</b>
+        <DIV  STYLE="position:absolute; top:250px; left:0px; width:100%; height:100px; float:left">
+<CENTER><FONT SIZE="+4" COLOR="00ff00">
+<p id="division1"><b>WELCOME TO my Homepage</b></p>
   
 </FONT></CENTER> 
       </section>
