--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
        <img class="img1" src="images/bb.jpg" alt="profile" >
         <DIV  STYLE="position:absolute; top:250px; left:0px; width:100%; height:100px; float:left">
 <CENTER><FONT SIZE="+4" COLOR="00ff00">
-<p id="division1"><b>WELCOME TO my Homepage</b></p>
+<p id="division1" <b>WELCOME TO my Homepage</b></p>
   
 </FONT></CENTER> 
       </section>
