About me page adding animation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="dropdown-content">
     <a href="#">Link 1 </a>
     
-
+<a href="#">Link 1 </a>
   </div>
 </div>
 <div class="dropdown">
