About me page adding animation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <button class="dropbtn">ABOUT</button>
   <div class="dropdown-content">
    <a href="#">Link 1 </a>
+ <a href="#">Link 1 </a>
+ <a href="#">Link 1 </a>
 
   </div>
 </div>
