Technical and cultutral blog

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <div class="dropdown">
   <button class="dropbtn">BLOG</button>
   <div class="dropdown-content">
-    <a href="Technical-blog"> Technical Blog </a>
-    <a href="Cultural-blog"> Cultural Blog</a>
+    <a href="blog/Technical-blog"> Technical Blog </a>
+    <a href="blog/Cultural-blog"> Cultural Blog</a>
   </div>
 </div>
 <div class="dropdown">
