--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="dropdown">
   <button class="dropbtn">BLOG</button>
   <div class="dropdown-content">
-    <a href="blog/Technical-blog">Technical Blob </a>
+    <a href="blog/Technical-blob">Technical Blog </a>
     <a href="blog/Cultural-blog">Cultural Blog</a>
   </div>
 </div>
@@ -82,8 +82,10 @@
       </section>
 
        <footer id="nav1">
-             <a  href="../index.html"  > <img src="images/twitter.png" title="something" width="50" height="50"/> </a>
+             <a  href="https://twitter.com/ssumeshsurya"> <img src="images/twitter.png" title="something" width="50" height="50"/> </a>
               <a  href="../index.html"  > <img src="images/git.png" title="something" width="50" height="50"/> </a>
+               <a  href="../index.html"  > <img src="images/linkedin.png" title="something" width="50" height="50"/> </a>
+              
              </footer>
 
 </body>
