Technical and cultutral blog

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 </FONT></CENTER> 
       </section>
 
-       <footer id="nav1">
+       <footer id="nav1"><p><b>Follow me on<b></p>
              <a  href="https://twitter.com/ssumeshsurya"> <img src="images/twitter.png" title="something" width="50" height="50"/> </a>
               <a  href="../index.html"  > <img src="images/git.png" title="something" width="50" height="50"/> </a>
-               <a  href="../index.html"  > <img src="images/linkedin.png" title="something" width="50" height="50"/> </a>
+               <a  href="../index.html"  > <img src="images/linkedin.jpg" title="something" width="50" height="50"/> </a>
               
              </footer>
 
