--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      </div>
 
     <div class="dropdown">
-     <button class="dropbtn" onclick="location.href='https://surya-surendranath.github.io/blog/Technical-blob';">PROJECTS</button>
+     <button class="dropbtn" >PROJECTS</button>
       <div class="dropdown-content">
      </div>
    </div>
