changing code for indentation

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                               <img class="img1" src="images/bb.jpg" alt="profile" >
                                               <div id="flex-img"  
                                                  <center>
-                                                      <font>
+                                                      <font SIZE="+4" COLOR="00ff00">
                                                         <p id="division1" <b>WELCOME TO my Homepage</b></p>
                                                       </font>
                                                 </center> 
