changing code for indentation

--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
                                           <div class="twelve coloumns">
                                               <img class="img1" src="images/bb.jpg" alt="profile" >
                                               <div id="flex-img"  
-                                                        <p id="division1" <b>WELCOME TO my Homepage</b></p>                                                      
+                                                 <center>
+                                                      <font SIZE="+4" COLOR="00ff00">
+                                                        <p id="division1" <b>WELCOME TO my Homepage</b></p>
+                                                      </font>
+                                                </center> 
                                               </div>
                                             </div>
                                   </div>
