--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                  <div class="row">
                                           <div class="twelve coloumns">
                                               <img class="img1" src="images/bb.jpg" alt="profile" >
-                                              <div id="flex-img"  
+                                              <div id="flex-img"> 
                                                  
                                                      
                                                         <p id="division1">  <b>WELCOME TO my Homepage</b></p>
