Adding c4 technical and cultural blogs

--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
                                                   <nav>
                                                   <ul id="footer-nav">
                                                       <li>
-                                                         <a  href="https://twitter.com/ssumeshsurya"> <img id="media-icon" src="../images/twitter.png" title="follow me" />
+                                                         <a  href="https://twitter.com/ssumeshsurya"> <img src="../images/twitter.png" title="follow me" width="50" height="50"/>
                                                          </a>
                                                       </li>
                                                       <li>
-                                                         <a  href="https://github.com/surya-surendranath"  > <img id="media-icon" src="../images/git.png" title="follow me" />
+                                                         <a  href="https://github.com/surya-surendranath"  > <img src="../images/git.png" title="follow me" width="50" height="50"/>
                                                          </a>
                                                       </li>
                                                       <li>
-                                                         <a  href="#"  > <img id="media-icon" src="../images/linkedin.jpg" title="follow me" /> 
+                                                         <a  href="#"  > <img src="../images/linkedin.jpg" title="follow me" width="50" height="50"/> 
                                                          </a>
                                                       </li>
                                                    </ul>
